src/index.css
/* ... */
@media (min-width: 1100px) {
  .input,
  .passwordInput,
  .emailInput,
  .nameInput,
  .textarea {
    padding: 0 5rem;
  }
}

.textarea {
  padding: 1rem 1.5rem;
  height: 300px;
  border-radius: 1rem;
}

.primaryButton {
  cursor: pointer;
  background: #00cc66;
  border-radius: 1rem;
  padding: 0.85rem 2rem;
  color: #ffffff;
  font-weight: 600;
  font-size: 1.25rem;
  width: 80%;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.removeIcon {
  cursor: pointer;
  position: absolute;
  top: -3%;
  right: -2%;
  height: 17px;
  width: 17px;
}
.editIcon {
  cursor: pointer;
  position: absolute;
  top: -3.4%;
  right: 17px;
  height: 17px;
  width: 17px;
}

.pageContainer,
.offers,
.profile,
.listingDetails,
.category,
.explore {
  margin: 1rem;
}
@media (min-width: 1024px) {
  .pageContainer,
  .offers,
  .profile,
  .listingDetails,
  .category,
  .explore {
    margin: 3rem;
  }
}

.loadingSpinnerContainer {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 5000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.loadingSpinner {
  width: 64px;
  height: 64px;
  border: 8px solid;
  border-color: #00cc66 transparent #00cc66 transparent;
  border-radius: 50%;
  animation: spin 1.2s linear infinite;
}
@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.pageHeader {
  font-size: 2rem;
  font-weight: 800;
}

.navbar {
  position: fixed;
  left: 0;
  bottom: 0;
  right: 0;
  margin-top: auto;
  height: 85px;
  background-color: #ffffff;
  z-index: 1000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.navbarNav {
  width: 100%;
  margin-top: 0.75rem;
  overflow-y: hidden;
}

.navbarListItems {
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.navbarListItem {
  cursor: pointer;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.navbarListItemName,
.navbarListItemNameActive {
  margin-top: 0.25rem;
  font-size: 14px;
  font-weight: 600;
  color: #8f8f8f;
}
.navbarListItemNameActive {
  color: #2c2c2c;
}

.nameInput {
  margin-bottom: 2rem;
  background: url("./assets/svg/badgeIcon.svg") #ffffff 2.5% center no-repeat;
}

.emailInput {
  margin-bottom: 2rem;
  background: url("./assets/svg/personIcon.svg") #ffffff 2.5% center no-repeat;
}

.passwordInputDiv {
  position: relative;
}

.passwordInput {
  margin-bottom: 2rem;
  background: url("./assets/svg/lockIcon.svg") #ffffff 2.5% center no-repeat;
}

.showPassword {
  cursor: pointer;
  position: absolute;
  top: -4%;
  right: 1%;
  padding: 1rem;
}

.forgotPasswordLink {
  cursor: pointer;
  color: #00cc66;
  font-weight: 600;
  text-align: right;
}

.signInBar,
.signUpBar {
  margin-top: 3rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: inherit;
}

.signInButton,
.signUpButton,
.signInText,
.signUpText {
  cursor: pointer;
}
@media (min-width: 1024px) {
  .signInBar,
  .signUpBar {
    justify-content: start;
  }
}

.signInText,
.signUpText {
  font-size: 1.5rem;
  font-weight: 700;
}

.signInButton,
.signUpButton {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 3rem;
  height: 3rem;
  background-color: #00cc66;
  border-radius: 50%;
}
@media (min-width: 1024px) {
  .signInButton,
  .signUpButton {
    margin-left: 3rem;
  }
}

.socialLogin {
  margin-top: 4rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.socialIconDiv {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.75rem;
  margin: 1.5rem;
  width: 3rem;
  height: 3rem;
  background-color: #ffffff;
  border-radius: 50%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
}

.socialIconImg {
  width: 100%;
}

.registerLink {
  margin-top: 4rem;
  color: #00cc66;
  font-weight: 600;
  text-align: center;
  margin-bottom: 8rem;
}

@media (min-width: 1217px) {
  .explore {
    margin-bottom: 10rem;
  }
}
@media (max-height: 536) {
  .explore {
    margin-bottom: 10rem;
  }
}

.exploreHeading,
.exploreCategoryHeading {
  font-weight: 700;
}

.exploreCategoryHeading {
  margin-top: 3rem;
}

.swiper-container {
  min-height: 225px;
  height: 23vw;
}

.swiper-pagination-bullet-active {
  background-color: #ffffff !important;
}

.swiperSlideDiv {
  position: relative;
  width: 100%;
  height: 100%;
}

.swiperSlideImg {
  width: 100%;
  object-fit: cover;
}

.swiperSlideText {
  color: #ffffff;
  position: absolute;
  top: 70px;
  left: 0;
  font-weight: 600;
  max-width: 90%;
  font-size: 1.25rem;
  background-color: rgba(0, 0, 0, 0.8);
  padding: 0.5rem;
}
@media (min-width: 1024px) {
  .swiperSlideText {
    font-size: 1.75rem;
  }
}

.swiperSlidePrice {
  color: #000000;
  position: absolute;
  top: 143px;
  left: 11px;
  font-weight: 600;
  max-width: 90%;
  background-color: #ffffff;
  padding: 0.25rem 0.5rem;
  border-radius: 1rem;
}
@media (min-width: 1024px) {
  .swiperSlidePrice {
    font-size: 1.25rem;
  }
}

.exploreCategories {
  display: flex;
  justify-content: space-between;
}
.exploreCategories a {
  width: 48%;
}

.exploreCategoryImg {
  min-height: 115px;
  height: 15vw;
  width: 100%;
  border-radius: 1.5rem;
  object-fit: cover;
  margin: 0 auto;
}

.exploreCategoryName {
  font-weight: 500;
  text-align: left;
}

.category {
  margin-bottom: 10rem;
}

.categoryListings {
  padding: 0;
}

.categoryListing {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;
  position: relative;
}

.categoryListingLink {
  display: contents;
}

.categoryListingImg {
  width: 30%;
  height: 100px;
  border-radius: 1.5rem;
  object-fit: cover;
}
@media (min-width: 1024px) {
  .categoryListingImg {
    width: 19%;
    height: 217px;
  }
}

.categoryListingDetails {
  width: 65%;
}
/* ... */

